--- a/quiz_htm.html
+++ b/quiz_htm.html
@@ -40,7 +40,7 @@
         <div class="timer" id="timer"></div>
     </div>
     <center>
-        <a href="./Quiz-landing/index.html">
+        <a href="./index.html">
             <button id="home" class="home" style="font-size:24px"><i class="fa-solid fa-house"></i></button>
         </a>
     </center>
