--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
             <link rel="stylesheet" href="styles.css">
         </head>
         <body>
-    <a href="./quiz_htm.html">
+    <a href="../quiz_htm.html">
         <button data-text="AWESOME" class="button">
             <span class="actual-text">QUIZ</span>
             <span class="hover-text" arial-hidden="true"> QUIZ </span>
